k8s/service3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
     labels:
       app: service3
    spec:
      containers:
        - image: service3:0.1
          imagePullPolicy: Never
          name: service3
          ports:
            - containerPort: 8080
