k8s/service3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service3-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service3
